--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -41,25 +41,27 @@
 
         <!-- Tombol kanan -->
         <div class="flex items-center space-x-4">
-          <!-- Tombol History -->
-          <button
-            id="openModal"
-            class="flex items-center gap-1 bg-blue-100 hover:bg-blue-200 text-blue-600 px-3 py-1 rounded-full transition shadow-sm"
-            title="Riwayat"
-          >
-            <i class="bi bi-clock-history text-base"></i>
-            <span>History</span>
-          </button>
+<!-- Tombol History (Disabled) -->
+<button
+  id="openModal"
+  disabled
+  class="flex items-center gap-1 bg-blue-100 text-blue-600 px-3 py-1 rounded-full transition shadow-sm opacity-50 cursor-not-allowed"
+  title="Riwayat"
+>
+  <i class="bi bi-clock-history text-base"></i>
+  <span>History</span>
+</button>
 
-          <!-- Tombol Logout -->
-          <button
-            id="btn-logout"
-            class="flex items-center gap-1 bg-red-100 hover:bg-red-200 text-red-600 px-3 py-1 rounded-full transition shadow-sm"
-            title="Keluar"
-          >
-            <i class="bi bi-box-arrow-right text-base"></i>
-            <span><span id="namaLogin" class="text-lg font-bold text-gray-800"></span></span>
-          </button>
+<!-- Tombol Logout (Disabled) -->
+<button
+  id="btn-logout"
+  disabled
+  class="flex items-center gap-1 bg-red-100 text-red-600 px-3 py-1 rounded-full transition shadow-sm opacity-50 cursor-not-allowed"
+  title="Keluar"
+>
+  <i class="bi bi-box-arrow-right text-base"></i>
+  <span><span id="namaLogin" class="text-lg font-bold text-gray-800"></span></span>
+</button>
         </div>
       </div>
     </nav>
