--- a/last-sj/index.html
+++ b/last-sj/index.html
@@ -215,7 +215,7 @@
         import { initializeApp } from 'https://www.gstatic.com/firebasejs/11.10.0/firebase-app.js';
         import { getDatabase, ref, set, get, update, push, query, remove, orderByChild, equalTo, onValue, off } from 'https://www.gstatic.com/firebasejs/11.10.0/firebase-database.js';
 
-        const app = initializeApp({ databaseURL: "https://stock-wv-default-rtdb.asia-southeast1.firebasedatabase.app" });
+        const app = initializeApp({ databaseURL: "https://stk-wv-default-rtdb.asia-southeast1.firebasedatabase.app" });
         const db = getDatabase(app);
         Object.assign(window, { db, ref, set, get, update, push, query, remove, orderByChild, equalTo, onValue, off });
     </script>
