--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -305,7 +305,7 @@ function showAlert(text = 'Berhasil!', type = 'success') {
     <script type="module">
       import { initializeApp } from 'https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js';
       import { getDatabase, ref, set, get, update, push, query, remove, orderByChild, equalTo, onValue, off } from 'https://www.gstatic.com/firebasejs/12.0.0/firebase-database.js';
-      const app = initializeApp({ databaseURL: "https://stock-wv-default-rtdb.asia-southeast1.firebasedatabase.app" });
+      const app = initializeApp({ databaseURL: "https://stk-wv-default-rtdb.asia-southeast1.firebasedatabase.app" });
       const db = getDatabase(app);
       Object.assign(window, { db, ref, set, get, update, push, query, remove, orderByChild, equalTo, onValue, off });
     </script>
