--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -37,7 +37,7 @@
       <div class="max-w-7xl mx-auto px-4 py-2 flex justify-between items-center">
         
         <!-- Tanggal -->
-        <div class="tanggal-real text-sm text-gray-600"></div>
+        <span>x</span><div class="tanggal-real text-sm text-gray-600"></div>
 
         <!-- Tombol kanan -->
         <div class="flex items-center space-x-4">
