--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -32,12 +32,18 @@
     <div id="backdrop" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center">
       <div class="text-white text-xl font-semibold">⏳ Menginisialisasi data...</div>
     </div>
+
+    
+    <div id="backdropLoading" class="fixed inset-0 bg-black bg-opacity-50 z-50 hidden flex items-center justify-center">
+      <div class="text-white text-xl font-semibold" id="textBackdropLoading"></div>
+    </div>
+
     <!-- ✅ Navbar -->
     <nav class="fixed top-0 left-0 w-full bg-white shadow z-50">
       <div class="max-w-7xl mx-auto px-4 py-2 flex justify-between items-center">
         
         <!-- Tanggal -->
-        <span>x</span><div class="tanggal-real text-sm text-gray-600"></div>
+        <div class="text-sm text-gray-600"><span class="tanggal-real"></span><span class="text-xs text-red-600"> (New!)</span></div>
 
         <!-- Tombol kanan -->
         <div class="flex items-center space-x-4">
@@ -165,9 +171,9 @@
     <div id="modalBox" class="bg-white rounded-2xl shadow-xl w-full h-full p-2 relative transform transition-all duration-300 ease-out flex flex-col pt-0">
       <div class="flex-1 overflow-auto rounded-xl bg-white p-2 pt-0">
         <div class="text-gray-800 mb-2 pt-6" id="closeModal"><span class="text-lg font-semibold">History Mutasi</span> <span class="text-sm tanggal-saja-real"></span></div>
-<hr>
+        <hr>
 
-<div id="historyContainer" class="space-y-2"></div>
+        <div id="historyContainer" class="space-y-2"></div>
 
       </div>
     </div>
