--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -124,7 +124,7 @@
             </div>
           </div>
 
-          <div class="grid grid-cols-3 gap-2">
+          <div class="wadah-tombol-aksi grid grid-cols-3 gap-2">
             <!-- Merah: Power -->
             <button
               id="btn-power"
@@ -151,6 +151,7 @@
             >
               <h1 class="text-4xl leading-[1.3]"><i class="bi bi-send-check-fill"></i></h1>
             </button>
+
           </div>
 
         </div>
