--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -173,9 +173,8 @@
       <div class="flex-1 overflow-auto rounded-xl bg-white p-2 pt-0">
         <div class="text-gray-800 mb-2 pt-6" id="closeModal"><span class="text-lg font-semibold">History Mutasi</span> <span class="text-sm tanggal-saja-real"></span></div>
         <hr>
-
-        <div id="historyContainer" class="space-y-2"></div>
-
+          <input type="text" class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 text-sm mb-2" placeholder="Cari mutasi...">
+          <div id="historyContainer" class="space-y-2 overflow-y-auto px-0" style="height: calc(100% - 110px);"></div>
       </div>
     </div>
 
