--- a/mutasi/index.html
+++ b/mutasi/index.html
@@ -197,8 +197,8 @@
 <!-- Tabs -->
 <div class="mb-2">
   <div class="flex border-b border-gray-200">
-    <button id="tabBefore" class="tab-btn px-4 py-2 text-sm font-semibold hover:text-blue-600 tab-active">Sebelum Jam 12</button>
-    <button id="tabAfter" class="tab-btn px-4 py-2 text-sm font-semibold hover:text-blue-600">Setelah Jam 12</button>
+    <button id="tabBefore" class="tab-btn px-4 py-2 text-sm font-semibold hover:text-blue-600 tab-active">Sebelum Jam 12 <span id="countBefore" class="text-red-600"></span></button>
+    <button id="tabAfter" class="tab-btn px-4 py-2 text-sm font-semibold hover:text-blue-600">Setelah Jam 12 <span id="countAfter" class="text-red-600"></span></button>
   </div>
 </div>
 
