--- a/proses-wh/index.html
+++ b/proses-wh/index.html
@@ -11,8 +11,8 @@
 
     <style>
     .thin-scroll::-webkit-scrollbar {
-      width: 1px;
-      height: 1px;
+      width: 3px;
+      height: 3px;
     }
     .thin-scroll::-webkit-scrollbar-thumb {
       background-color: rgba(0, 0, 0, 0.4);
@@ -26,21 +26,47 @@
   </head>
  <body class="h-screen flex">
 
-  <!-- Sidebar kiri -->
-  <div id="sidebar" class="w-[20%] p-2 border-r border-gray-300 flex flex-col">
-    <h2 class="text-xl font-semibold mb-4 flex-shrink-0 border-b border-gray-300 pb-2">
-      List SJ Yang Di Proses
-    </h2>
-    <div id="summary" class="space-y-2 overflow-auto flex-1 overflow-auto thin-scroll">
-      <!-- isi summary -->
-    </div>
-  </div>
+    <!-- Sidebar kiri -->
+    <!-- Pastikan sudah load Bootstrap Icons CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
-  <!-- Konten kanan -->
-  <div id="mainContent" class="flex-1 p-4 overflow-auto">
-    <h2 class="text-xl font-semibold mb-4">Main Content</h2>
-    <p>Tempat konten lain bisa ditaruh di sini...</p>
-  </div>
+
+
+    <div id="sidebar" class="w-[27%] min-[1920px]:w-[20%] p-2 border-r border-gray-300 flex flex-col">
+      
+      <!-- Wrapper Tanggal -->
+      <div class="mb-3">
+        <input id="tanggalInput"
+              type="date"
+              class="w-full border border-gray-300 rounded-md px-3 py-1 text-sm h-[38px] focus:outline-none focus:ring-1 focus:ring-blue-400">
+      </div>
+
+      <!-- Header Sidebar -->
+      <h2 id="sidebarHeader" class="text-xl font-semibold mb-4 flex-shrink-0 border-b border-gray-300 pb-2 flex items-center w-full gap-2">
+        <!-- Tombol Power -->
+        <button class="px-3 py-1 border border-gray-300 rounded-md bg-white hover:bg-gray-100 flex items-center justify-center" title="Power">
+          <i class="bi bi-power text-red-500 text-lg"></i>
+        </button>
+
+        <!-- Kolom Search -->
+        <input id="cariDataSj"
+              type="search"
+              class="flex-1 border border-gray-300 rounded-md px-3 py-1 text-sm h-[38px] focus:outline-none focus:ring-1 focus:ring-blue-400"
+              placeholder="Cari SJ...">
+      </h2>
+
+      <!-- Isi Summary -->
+      <div id="summary" class="space-y-2 flex-1 overflow-auto thin-scroll">
+        <!-- isi summary -->
+      </div>
+    </div>
+
+
+    <!-- Konten kanan -->
+    <div id="mainContent" class="flex-1 p-4 overflow-auto">
+      <h2 class="text-xl font-semibold mb-4">Detail Items</h2>
+      <div id="detail"></div>
+    </div>
     <!-- Libraries -->
     <!-- <script src="https://unpkg.com/lucide@latest"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js" crossorigin="anonymous"></script>
@@ -51,7 +77,6 @@
 
     <script src="./script.js"></script>
 
-
     <script type="module">
       import { initializeApp } from 'https://www.gstatic.com/firebasejs/12.0.0/firebase-app.js';
       import { getDatabase, ref, set, get, update, push, query, remove, orderByChild, equalTo, onValue, off } from 'https://www.gstatic.com/firebasejs/12.0.0/firebase-database.js';
@@ -60,95 +85,105 @@
       Object.assign(window, { db, ref, set, get, update, push, query, remove, orderByChild, equalTo, onValue, off });
     </script>
 
+<script>
+  var data = {};
+  let fbsSvc;
 
-    <!-- <script src="https://unpkg.com/lucide@latest"></script> -->
+  // Cari data marketing by ID
+  function cariById(id) {
+    return data.nmMkt.find(item => item.id_mkt === String(id)) || null;
+  }
 
-    <script>
-      // lucide.createIcons();
+  // Fungsi filter berdasarkan input
+  function filterSummary(keyword) {
+    keyword = String(keyword || "").toLowerCase().trim();
 
-      var data = {};
-      let fbsSvc;
-            
-      function cariById(id) {
-        return data.nmMkt.find(item => item.id_mkt === String(id)) || null;
+    if (!keyword) return Object.values(data.dataside || {});
+
+    return Object.values(data.dataside || {}).filter(item =>
+      String(item.id_sj).toLowerCase().includes(keyword) ||
+      String(item.id_mkt).toLowerCase().includes(keyword) ||
+      String(item.jml_item).toLowerCase().includes(keyword) ||
+      String(item.mkt || "").toLowerCase().includes(keyword) ||
+      String(item.stamp || "").toLowerCase().includes(keyword)
+    );
+  }
+
+  // Render awal atau setelah filter
+  function renderFiltered(keyword) {
+    const filtered = filterSummary(keyword);
+    renderElemenSummary(filtered);
+  }
+
+  // Load data SJ sesuai tanggal
+  function loadDataSJ(tgl) {
+    prosesDataSJ(
+      'https://cdn.weva.my.id/apix/dtSj',
+      { tgl },
+      (result) => {
+        data.result = result;
+        data.dataside = data.result.summary;
+        renderElemenSummary(data.dataside);
+      }
+    );
+  }
+
+  function cariByIdSj(idSj) {
+    const targetId = Number(idSj); // pastikan jadi number agar presisi
+    return data.result.raw.filter(item => Number(item.id_sj) === targetId);
+  }
+
+  $(function () {
+    // Ambil param tanggal dari URL
+    const params = new URLSearchParams(window.location.search);
+    const today = stm('t');
+    let initDate = params.get('tgl') || today;
+
+    // Jika URL tidak ada ?tgl=..., set default
+    if (!params.has('tgl')) {
+      params.set('tgl', today);
+      window.history.replaceState({}, '', `?${params.toString()}`);
+    }
+
+    // Set nilai awal input tanggal
+    $('#tanggalInput').val(initDate);
+
+    // Event input search
+    $('#cariDataSj').on('input', function () {
+      renderFiltered($(this).val());
+    });
+
+    // Event change tanggal
+    $('#tanggalInput').on('change', function () {
+      const selectedDate = $(this).val();
+      params.set('tgl', selectedDate);
+      window.history.replaceState({}, '', `?${params.toString()}`);
+      loadDataSJ(selectedDate);
+    });
+
+    // Load data marketing & data SJ
+    fbsSvc = new Fbs(db);
+    fbsSvc.gDt('/user', '', (d) => {
+      let arr = [];
+
+      if (Array.isArray(d)) {
+        arr = d;
+      } else if (d && typeof d === 'object') {
+        arr = Object.values(d);
+      } else {
+        console.warn('Data marketing tidak valid:', d);
       }
 
-      $(function () {
-        fbsSvc = new Fbs(db);
+      data.nmMkt = arr.map(val => ({
+        usr: val.usr || '',
+        mkt: val.mkt || '',
+        id_mkt: val.id_mkt || ''
+      }));
 
-        fbsSvc.gDt('/user','',(d)=>{
-          const filteredArray = $.map(d, function (val) {
-            return {
-              usr: val.usr,
-              mkt: val.mkt,
-              id_mkt: val.id_mkt
-            };
-          });
-          data.nmMkt = filteredArray;
-          // console.log(filteredArray);
+      loadDataSJ(initDate);
+    });
+  });
+</script>
 
-          // Contoh penggunaan
-          // let hasil = cariById(14);
-          // console.log(hasil)
-
-
-
-        prosesDataSJ(
-            'https://cdn.weva.my.id/apix/dtSj',
-            { tgl: '2025-08-05' },
-            (result) => {
-                console.log('Hasil:', result);
-                renderElemenSummary(result.summary);
-                // Simpan ke variabel, proses lanjut di sini
-            }
-        );
-
-
-          /*
-          const storageKey = "summary_tgl_2025-08-05";
-
-          // Cek apakah data sudah ada di localStorage
-          const savedSummary = localStorage.getItem(storageKey);
-
-          if (savedSummary) {
-              console.log("Load dari localStorage");
-              const parsedSummary = JSON.parse(savedSummary);
-              renderElemenSummary(parsedSummary);
-          } else {
-              console.log("Load dari API");
-              prosesDataSJ(
-                  'https://cdn.weva.my.id/apix/dtSj',
-                  { tgl: '2025-08-05' },
-                  (result) => {
-                      console.log('Hasil:', result);
-                      renderElemenSummary(result.summary);
-                      // Simpan ke localStorage
-                      localStorage.setItem(storageKey, JSON.stringify(result.summary));
-                  }
-              );
-          }
-          */
-
-
-        })
-      });
-      /*
-      $(()=>{
-        prosesDataSJ(
-            'https://cdn.weva.my.id/apix/dtSj',
-            { tgl: '2025-08-05' },
-            (result) => {
-                console.log('Hasil:', result);
-                renderElemenSummary(result.summary);
-                // Simpan ke variabel, proses lanjut di sini
-            }
-        );
-      })
-      */
-
-      $(() => {
-      });
-
-    </script>
   </body>
 </html>
