--- a/proses-wh/index.html
+++ b/proses-wh/index.html
@@ -10,6 +10,38 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
 
     <style>
+      /* Tooltip simple berbasis data-tooltip */
+      [data-tooltip] {
+        position: relative;
+        cursor: pointer;
+      }
+      [data-tooltip]::after {
+        content: attr(data-tooltip);
+        position: absolute;
+        bottom: 125%; /* posisi di atas elemen */
+        left: 50%;
+        transform: translateX(-50%);
+        background-color: #1f2937; /* bg-gray-800 */
+        color: white;
+        padding: 4px 8px;
+        border-radius: 0.25rem;
+        font-size: 0.75rem;
+        white-space: nowrap;
+        opacity: 0;
+        pointer-events: none;
+        transition: opacity 0.2s;
+      }
+      [data-tooltip]:hover::after {
+        opacity: 1;
+      }
+
+      /* Transisi smooth untuk opacity */
+      #alertModal {
+        transition: opacity 0.3s ease;
+      }
+    </style>
+
+    <style>
     .thin-scroll::-webkit-scrollbar {
       width: 3px;
       height: 3px;
@@ -33,7 +65,7 @@
 
 
     <div id="sidebar" class="w-[27%] min-[1920px]:w-[20%] p-2 border-r border-gray-300 flex flex-col">
-      
+
       <!-- Wrapper Tanggal -->
       <div class="mb-3">
         <input id="tanggalInput"
@@ -183,6 +215,53 @@
       loadDataSJ(initDate);
     });
   });
+</script>
+
+
+<script>
+  function showAlert(message, duration = 3000) {
+    const modal = document.getElementById('alertModal');
+    const msg = document.getElementById('alertMessage');
+    const btnClose = document.getElementById('alertBtn');
+
+    let timeLeft = Math.ceil(duration / 1000); // hitungan mundur dalam detik
+    msg.textContent = message;
+    btnClose.innerHTML = `<i class="bi bi-x-lg"></i> (${timeLeft})`;
+
+    modal.classList.remove('hidden');
+    modal.classList.add('flex', 'opacity-0'); // mulai dari transparan
+
+    // Fade-in
+    setTimeout(() => modal.classList.remove('opacity-0'), 10);
+
+    // Update countdown tiap 1 detik
+    const countdown = setInterval(() => {
+      timeLeft--;
+      btnClose.innerHTML = `<i class="bi bi-x-lg"></i> (${timeLeft})`;
+      if (timeLeft <= 0) clearInterval(countdown);
+    }, 1000);
+
+    // Auto close
+    const timer = setTimeout(() => {
+      closeAlert();
+      clearInterval(countdown);
+    }, duration);
+
+    // Tombol close manual
+    btnClose.onclick = () => {
+      clearTimeout(timer);
+      clearInterval(countdown);
+      closeAlert();
+    };
+
+    function closeAlert() {
+      modal.classList.add('opacity-0'); // fade-out
+      setTimeout(() => {
+        modal.classList.add('hidden');
+        modal.classList.remove('flex');
+      }, 300); // sesuai durasi transisi CSS
+    }
+  }
 </script>
 
   </body>
