--- a/proses-wh/index.html
+++ b/proses-wh/index.html
@@ -8,7 +8,31 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
+<style>
+.custom-checkbox {
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border: 2px solid red;
+  border-radius: 4px;
+  position: relative;
+  cursor: pointer;
+}
 
+.custom-checkbox:checked::after {
+  content: "✕";
+  color: white;
+  font-size: 14px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -55%);
+}
+
+.custom-checkbox:checked {
+  background: red;
+}
+</style>
     <style>
       /* Tooltip simple berbasis data-tooltip */
       [data-tooltip] {
