--- a/proses-wh/index.html
+++ b/proses-wh/index.html
@@ -8,31 +8,52 @@
     <script src="https://cdn.tailwindcss.com"></script>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-<style>
-.custom-checkbox {
-  appearance: none;
-  width: 20px;
-  height: 20px;
-  border: 2px solid red;
-  border-radius: 4px;
-  position: relative;
-  cursor: pointer;
-}
+    <style>
+      /* Custom Checkbox Utama */
+      .custom-checkbox {
+        appearance: none;
+        width: 20px;
+        height: 20px;
+        border: 2px solid red;
+        border-radius: 4px;
+        position: relative;
+        cursor: pointer;
+        background-color: white;
+        transition: background 0.2s, border 0.2s;
+      }
 
-.custom-checkbox:checked::after {
-  content: "✕";
-  color: white;
-  font-size: 14px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -55%);
-}
+      /* Checked state */
+      .custom-checkbox:checked {
+        background-color: red;
+        border-color: red;
+      }
 
-.custom-checkbox:checked {
-  background: red;
-}
-</style>
+      /* Tanda ✕ saat checked */
+      .custom-checkbox:checked::after {
+        content: "✕";
+        color: white;
+        font-size: 14px;
+        font-weight: bold;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        pointer-events: none; /* agar tidak mengganggu klik */
+      }
+
+      /* Disabled state */
+      .custom-checkbox:disabled {
+        background-color: #fc7979; /* merah pucat */
+        border-color: #fc7979;
+        cursor: not-allowed;
+      }
+
+      /* Disabled + Checked */
+      .custom-checkbox:disabled:checked::after {
+        content: "✕";
+        color: #fff5f5; /* putih pucat */
+      }
+    </style>
     <style>
       /* Tooltip simple berbasis data-tooltip */
       [data-tooltip] {
@@ -122,7 +143,7 @@
       </div>
 
       <!-- Header Sidebar -->
-      <h2 id="sidebarHeader" class="text-xl font-semibold mb-4 flex-shrink-0 border-b border-gray-300 pb-2 flex items-center w-full gap-2">
+      <h2 id="sidebarHeader" class="text-xl font-semibold mb-2 flex-shrink-0 border-b border-gray-300 pb-2 flex items-center w-full gap-2">
         <!-- Tombol Power -->
         <button class="px-3 py-1 border border-gray-300 rounded-md bg-white hover:bg-gray-100 flex items-center justify-center" title="Power">
           <i class="bi bi-power text-red-500 text-lg"></i>
@@ -134,6 +155,36 @@
               class="flex-1 border border-gray-300 rounded-md px-3 py-1 text-sm h-[38px] focus:outline-none focus:ring-1 focus:ring-blue-400"
               placeholder="Cari SJ...">
       </h2>
+      
+      <!-- Header Sidebar -->
+      <h2 id="sidebarHeader" class="text-xl font-semibold mb-4 flex-shrink-0 border-b border-gray-300 pb-2 w-full grid grid-cols-4 gap-1">
+        
+        <!-- Menampung seluruh jumlah transaksi -->
+        <div class="flex items-center gap-2 border rounded-md p-1">
+          <i class="bi bi-graph-up-arrow text-red-500 text-lg"></i>
+          <span id="col1Text" class="text-sm"></span>
+        </div>
+
+        <!-- Menampung jumlah transaksi Online / Offline -->
+        <div class="flex items-center gap-2 border rounded-md p-1">
+          <i class="bi bi-toggles2 text-gray-500 text-lg"></i>
+          <span id="col2Text" class="text-sm"></span>
+        </div>
+
+        <!-- Menampung jumlah transaksi yang menggunakan ekspedisi -->
+        <div class="flex items-center gap-2 border rounded-md p-1">
+          <i class="bi bi-truck text-blue-500 text-lg"></i>
+          <span id="col3Text" class="text-sm"></span>
+        </div>
+
+        <!-- Menampung jumlah transaksi yang melibatkan retur -->
+        <div class="flex items-center gap-2 border rounded-md p-1">
+          <i class="bi bi-recycle text-yellow-500 text-lg"></i>
+          <span id="col3Text" class="text-sm"></span>
+        </div>
+
+      </h2>
+
 
       <!-- Isi Summary -->
       <div id="summary" class="space-y-2 flex-1 overflow-auto thin-scroll">
@@ -147,6 +198,29 @@
       <h2 class="text-xl font-semibold mb-4">Detail Items</h2>
       <div id="detail"></div>
     </div>
+
+
+<!-- Modal -->
+<div id="layer-2-modal" class="fixed inset-0 bg-black bg-opacity-50 hidden flex items-center justify-center z-50">
+  <div class="bg-white p-6 rounded-2xl shadow-lg w-11/12 max-w-4xl relative">
+    <!-- Tombol Close -->
+    <button id="close-layer-2" class="absolute top-2 right-2 text-gray-600 hover:text-black text-xl">
+      ✕
+    </button>
+    <h2 class="text-xl font-bold mb-4">Tambahkan Stock Lain</h2>
+    <div id="modal-content-layer-2" class="text-gray-700">
+      <!-- Konten akan diisi lewat JS -->
+      <div class="list-stock max-h-[500px] overflow-y-auto"></div>
+    </div>
+    <div class="mt-4 text-right">
+      <button id="close-btn-layer-2" class="px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700">
+        Tutup
+      </button>
+    </div>
+  </div>
+</div>
+
+
     <!-- Libraries -->
     <!-- <script src="https://unpkg.com/lucide@latest"></script> -->
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.21/lodash.min.js" crossorigin="anonymous"></script>
@@ -171,6 +245,7 @@
 
 <script>
   var data = {};
+  var tempData = {};
   let fbsSvc,fbsSvcX;
 
   // Cari data marketing by ID
@@ -220,6 +295,19 @@
     const targetId = Number(idSj); // pastikan jadi number agar presisi
     return data.result.raw.filter(item => Number(item.id_sj) === targetId);
   }
+
+  function getDtStock(id, callback) {
+    fbsSvcX.gDt(`layer2/${id}`, '', (d) => {
+      // filter data: buang yang stts == 'h'
+      let filtered = Array.isArray(d) ? d.filter(item => item.stts !== 'h') : [];
+
+      data["layer2"] = filtered;
+      if (typeof callback === "function") {
+        callback(filtered); // kirim data yang sudah difilter
+      }
+    });
+  }
+
 
   $(function () {
     // Ambil param tanggal dari URL
@@ -320,6 +408,13 @@
 let alertTimer = null;
 let alertCountdown = null;
 
+function tampilkanPilihanStockLain(d){
+  // getDtStock(d,(r)=>{
+  //   console.log(data.tempOlahSj);
+  //   console.log(d,r);
+  // });
+}
+
 function showAlert(message, duration = 3000) {
   const modal = document.getElementById('alertModal');
   const msg = document.getElementById('alertMessage');
@@ -385,5 +480,52 @@ function showAlert(message, duration = 3000) {
 
 </script>
 
+    <script>
+      function listenerLayer2() {
+        let idKain;
+
+        // buka modal dari tombol dengan ambil data-id-kain
+        $(document).on("click", ".open-layer-2", function () {
+          idKain = $(this).data("id-kain"); // ambil atribut data-id-kain
+          $("#layer-2-modal").removeClass("hidden");
+          tampilkanPilihanStockLain(idKain);
+        });
+
+        // tutup modal
+        $("#close-layer-2, #close-btn-layer-2").on("click", function () {
+          $("#layer-2-modal").addClass("hidden");
+        });
+
+        // klik di luar konten modal → tutup
+        $("#layer-2-modal").on("click", function (e) {
+          if (e.target.id === "layer-2-modal") {
+            $("#layer-2-modal").addClass("hidden");
+          }
+        });
+
+        // fungsi isi modal
+        function tampilkanPilihanStockLain(id) {
+          getDtStock(id,(r)=>{
+            // console.log(data.tempOlahSj);
+            console.log(id,r);
+
+            let html = r.map(item => {
+              return `
+                <div class="item border p-1 mb-1 rounded cursor-pointer hover:bg-gray-100" data-id="${item.id_stock}">
+                  <strong>(${item.id_stock}) ${item.ltrl} ${item.stts}</strong> 
+                  <span class="text-gray-500">[${item.rak} ${item.kol}]</span> | 
+                  <span class="text-gray-500">[Out ${item.q !== "0" ? item.q : item.q_o}]</span>
+                </div>
+              `;
+            }).join("");
+            // console.log(html);
+
+                // <p>ID Kain: <strong>${id}</strong></p>
+                // <p>👉 Di sini bisa load pilihan stock lain dari server</p>
+            $("#modal-content-layer-2 .list-stock").html(html);
+          });
+        }
+      }
+    </script>
   </body>
 </html>
