--- a/proses-wh/index3.html
+++ b/proses-wh/index3.html
@@ -252,51 +252,41 @@
       <!-- Wrapper utama -->
       <div class="flex items-center justify-between mb-4">
         <!-- Toolbar Buttons (kiri) -->
-<div class="flex gap-4">
-  <!-- Dashboard -->
-  <button
-    onclick="renderDashboard()"
-    class="w-auto px-3 h-10 flex items-center gap-2 rounded-xl bg-gray-100 text-gray-600 hover:bg-blue-100 hover:text-blue-600 active:scale-95 shadow text-sm"
-  >
-    <i class="bi bi-speedometer2 text-base"></i>
-    <span>Dashboard</span>
-  </button>
+        <div class="flex gap-4">
+          <!-- Dashboard -->
+          <button
+            onclick="renderDashboard()"
+            class="w-16 h-16 flex flex-col items-center justify-center rounded-xl bg-gray-100 text-gray-600 hover:bg-blue-100 hover:text-blue-600 active:scale-95 shadow"
+          >
+            <i class="bi bi-speedometer2 text-xl"></i>
+            <span class="text-[10px] mt-1">Dashboard</span>
+          </button>
 
-  <!-- Plus -->
-  <button
-    onclick="modalStockLainya('tambah')"
-    class="w-auto px-3 h-10 flex items-center gap-2 rounded-xl bg-gray-100 text-gray-600 hover:bg-green-100 hover:text-green-600 active:scale-95 shadow text-sm"
-  >
-    <i class="bi bi-plus-circle text-base"></i>
-    <span>Tambah</span>
-  </button>
+          <!-- Plus -->
+          <button
+            onclick="modalStockLainya('tambah')"
+            class="w-16 h-16 flex flex-col items-center justify-center rounded-xl bg-gray-100 text-gray-600 hover:bg-green-100 hover:text-green-600 active:scale-95 shadow"
+          >
+            <i class="bi bi-plus-circle text-xl"></i>
+            <span class="text-[10px] mt-1">Tambah</span>
+          </button>
 
-  <!-- Report -->
-  <button
-    class="w-auto px-3 h-10 flex items-center gap-2 rounded-xl bg-gray-100 text-gray-600 hover:bg-indigo-100 hover:text-indigo-600 active:scale-95 shadow text-sm"
-  >
-    <i class="bi bi-file-earmark-bar-graph text-base"></i>
-    <span>Report</span>
-  </button>
+          <!-- Report -->
+          <button
+            class="w-16 h-16 flex flex-col items-center justify-center rounded-xl bg-gray-100 text-gray-600 hover:bg-indigo-100 hover:text-indigo-600 active:scale-95 shadow"
+          >
+            <i class="bi bi-file-earmark-bar-graph text-xl"></i>
+            <span class="text-[10px] mt-1">Report</span>
+          </button>
 
-  <!-- User -->
-  <button
-    class="w-auto px-3 h-10 flex items-center gap-2 rounded-xl bg-gray-100 text-gray-600 hover:bg-purple-100 hover:text-purple-600 active:scale-95 shadow text-sm"
-  >
-    <i class="bi bi-person text-base"></i>
-    <span>User</span>
-  </button>
-
-  <!-- Aktivitas Terbaru -->
-  <button
-    onclick="renderAktivitasTerbaru()"
-    class="w-auto px-3 h-10 flex items-center gap-2 rounded-xl bg-gray-100 text-gray-600 hover:bg-orange-100 hover:text-orange-600 active:scale-95 shadow text-sm"
-  >
-    <i class="bi bi-clock-history text-base"></i>
-    <span>Aktivitas</span>
-  </button>
-</div>
-
+          <!-- User -->
+          <button
+            class="w-16 h-16 flex flex-col items-center justify-center rounded-xl bg-gray-100 text-gray-600 hover:bg-purple-100 hover:text-purple-600 active:scale-95 shadow"
+          >
+            <i class="bi bi-person text-xl"></i>
+            <span class="text-[10px] mt-1">User</span>
+          </button>
+        </div>
 
         <!-- Tombol kanan (small actions) -->
         <div class="flex gap-2">
